--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,6 +38,7 @@ markdown_extensions:
     - toc:
         permalink: true
     - fontawesome_markdown
+    - footnotes
 
 pages:
     - はじめに: 'index.md'
